# Javacode

./: pyproject.toml
src/Week 1/Модуль 1/: singleton_module.py  Атрибуты класса.py
src/Week 1/Модуль 3/: results.jsonl  urls.txt  Асинхронный HTTP-запрос. Продвинутая реализация.py  Асинхронный HTTP-запрос.py
src/Week 1/Модуль 4/: results.json  Параллельная обработка числовых данных.py
src/Week 2 DRF/Модуль 2 Базы данных Redis/: Ограничитель скорости (rate limiter).py  Очередь.py  Распределенный лок.py
src/Модуль 1/: Декоратор кеширования.py  Синглтон.py
src/Модуль 2/: Поиск элемента в упорядоченном списке.py
src/Модуль 3/: results_advanced.jsonl  Асинхронный HTTP-запрос. Продвинутая реализация.py  Асинхронный HTTP-запрос.py
src/Модуль 4/: results.json  Параллельная обработка числовых данных.py
src/Модуль 6/: ASGI функция которая проксирует курс валют.py  WSGI функция которая проксирует курс валют.py
